# saudi-tts-f5

./: 0_benchmark.py  1_infer_11labs.py  1_infer_habibi.py  2_cal_wer-o.py  2_cal_wer-s.py  3_cal_spksim.py  LICENSE  README.md  example.toml  infer_cli.py  infer_gradio.py  pyproject.toml  utils.py  utils_eval.py  utils_infer.py  vocab.txt
