[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "habibi-tts"
version = "0.1.0"
description = "Habibi: Laying the Open-Source Foundation of Unified-Dialectal Arabic Speech Synthesis"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "f5-tts",
    "torch>=2.4.0, <2.9.0",
]

[project.urls]
Homepage = "https://github.com/SWivid/Habibi-TTS"

[project.scripts]
"habibi-tts_infer-cli" = "habibi_tts.infer.infer_cli:main"
"habibi-tts_infer-gradio" = "habibi_tts.infer.infer_gradio:main"
